prevent learn dash courses from getting extra padding for buddypanel

--- a/wp-content/universal-assets/v1/scss/universal-nav.scss
+++ b/wp-content/universal-assets/v1/scss/universal-nav.scss
@@ -647,6 +647,10 @@ body.buddyboss-theme {
 				margin-left: 0px;
 			}
 		}
+		// lesson pages are set to not show any buddypanel since they have a left hand nav of their own
+		&.single-sfwd-lessons #page.site {
+			margin-left: 0px;
+		}
 	}
 }
 
